# Dynamic-Matrix

./: CMakeLists.txt  Makefile  README.md  run_matrix.sh
asm/: add_func.asm  hello.asm  strlen.asm
asm/x64/: add_three.asm  exit_x64.asm
build_shell/: matrix_advanced
c/: armstrong.c  array_max.c  binary_conv.c  binary_search.c  divisors.c  edit_distance.c  fib_iter.c  fibonacci.c  gcd.c  heap_sort.c  insertion_sort.c  knapsack.c  lcm.c  leap_year.c  linear_search.c  linked_list.c  math_ops.c  matrix_advanced.c  matrix_transpose.c  palindrome.c  pascal.c  pattern.c  prime_check.c  quadratic.c  quick_sort.c  selection_sort.c  sorting.c  string_rev.c  sum_digits.c  swap_no_temp.c  table.c
c/data_structures/: queue.c  stack.c
c/encryption/: aes_mock.c  diffie_hellman.c
cpp/: exceptions.cpp  lambdas.cpp  matrix_oo.cpp  multithreading.cpp  numeric_algo.cpp  shape_hierarchy.cpp  smart_pointers.cpp  stl_map.cpp  stl_vector.cpp  templates.cpp
cpp/patterns/: observer.cpp  singleton.cpp
cpp/quantum/: qubit_sim.cpp
go/: audit_hash.go
go/src/: concurrency.go
include/: math_ops.h
python/: telemetry_sim.py
python/scripts/: threat_analysis.py
rust/: encrypt_core.rs
rust/src/: sensor_registry.rs
